[package]
name = "wiki-dumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "string"] }
color-eyre = "0.6.3"
indexmap = { version = "2.2.6", features = ["serde"] }
mwapi = "0.6.0"
mwbot = "0.6.1"
nucleo-matcher = "0.3.1"
regex = "1.10.4"
serde = "1.0.199"
serde_derive = "1.0.199"
serde_ignored = "0.1.10"
serde_json = "1.0.116"
serde_path_to_error = "0.1.16"
textwrap = { version = "0.16.1", default-features = false }
tokio = "1.37.0"
toml_edit = "0.22.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
xshell = "0.2.6"
